<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        android:layout_marginTop="10dp"
        app:constraint_referenced_ids="author, published, menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/barrier_header"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
       android:paddingTop="160dp"/>

    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@id/imageViews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViews"
        tools:text="@sample/posts.json/data/viewCount" />

    <ImageView
        android:id="@+id/imageViews"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_image_view_count"
        android:src="@drawable/sharp_visibility_24"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/viewsCount"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

    <ImageView
        android:id="@+id/imageLike"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_image_like_count"
        android:src="@drawable/outline_favorite_border_24"
        app:layout_constraintEnd_toStartOf="@id/likeCount"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@id/imageLike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageLike"
        android:layout_marginStart="28dp"
        tools:text="@sample/posts.json/data/liked" />

    <ImageView
        android:id="@+id/imageShare"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_image_share_count"
        android:src="@drawable/baseline_share_24"
        app:layout_constraintEnd_toStartOf="@id/shareCount"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

    <TextView
        android:id="@+id/shareCount"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@id/imageShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageShare"
        android:layout_marginStart="100dp"
        tools:text="@sample/posts.json/data/sharedCount" />

</androidx.constraintlayout.widget.ConstraintLayout>

